Retrieves LiteralExpr